crates/apollo-compiler/test_data/diagnostics/0042_mutation_operation_with_undefined_fields.txt
Error: cannot query field `undefinedMutationField` on type `Mutation`
    ╭─[0042_mutation_operation_with_undefined_fields.graphql:2:3]
    │
  2 │       undefinedMutationField
    │       ───────────┬──────────  
    │                  ╰──────────── `undefinedMutationField` field is not defined
    │ 
 10 │ ╭─▶ type Mutation {
    ┆ ┆   
 12 │ ├─▶ }
    │ │       
    │ ╰─────── `Mutation` declared here
    │     
    │     Help: `undefinedMutationField` is not defined on `Mutation` type
────╯

